src/test/ui/or-patterns/mismatched-bindings-async-fn.stderr
error[E0408]: variable `x` is not bound in all patterns
  --> $DIR/mismatched-bindings-async-fn.rs:6:17
   |
LL | async fn a((x | s): String) {}
   |             -   ^ pattern doesn't bind `x`
   |             |
   |             variable not in all patterns

error[E0408]: variable `s` is not bound in all patterns
  --> $DIR/mismatched-bindings-async-fn.rs:6:13
   |
LL | async fn a((x | s): String) {}
   |             ^   - variable not in all patterns
   |             |
   |             pattern doesn't bind `s`

error[E0408]: variable `x` is not bound in all patterns
  --> $DIR/mismatched-bindings-async-fn.rs:11:13
   |
LL |     let x | s = String::new();
   |         -   ^ pattern doesn't bind `x`
   |         |
   |         variable not in all patterns

error[E0408]: variable `s` is not bound in all patterns
  --> $DIR/mismatched-bindings-async-fn.rs:11:9
   |
LL |     let x | s = String::new();
   |         ^   - variable not in all patterns
   |         |
   |         pattern doesn't bind `s`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0408`.
